--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 			<artifactId>maven-compiler-plugin</artifactId>
 			<version>3.12.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.microsoft.sqlserver</groupId>
+			<artifactId>mssql-jdbc</artifactId>
+			<version>9.4.1.jre11</version>
+		</dependency>
 	</dependencies>
 
 	<build>
